# advent-of-code

./: .gitignore
2020/01/: day1.py
2020/02/: day2.py
2020/03/: day3.py
2020/04/: day4.py  day42.py  day42.txt
2020/05/: day5.hs  day5.py
2020/06/: day6.py
2020/07/: day7.py
2023/01/: aoc01.py  aoc01_2.py
2023/02/: aoc02.py  aoc02_2.py
2023/03/: aoc03.py
2024/: CMakeLists.txt
2024/src/day01/: day01.cpp  day01.hpp  puzzle_description.md
2024/src/day02/: day02.cpp  day02.hpp
2024/src/day03/: day03.cpp  day03.hpp
2024/src/day04/: day04.cpp
2024/src/day05/: day05.cpp  day05.hpp
2024/src/day06/: day06.cpp  day06.hpp
2024/src/day07/: day07.cpp  day07.hpp
2024/src/template_day0X/: day01.cpp  day01.hpp  dayXX.hpp
2024/src/utils/: fileReader.cpp  fileReader.hpp
